# shifts_mvp

./: README.MD  user_flow.mmd
.scripts/: validate_commit_msg.py
api/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.toml  ruff.toml  tox.toml  ty.toml
api/src/app/: config.py  main.py
api/src/app/api/: router.py
api/src/app/api/routes/: health.py  mvp.py
api/src/app/db/: cli.py  repository.py  reset.py  seed.py  session.py
api/src/app/schemas/: common.py
api/src/app/services/: mvp.py
api/tests/: test_config.py  test_main.py  test_mvp_api.py
docs/: open_questions.md
docs/adr/: 0001-use-react-vite-tailwind-pwa.md  0002-use-fastapi-for-backend-api.md  0003-use-openapi-as-api-contract.md  0004-use-mock-services-before-backend-integration.md  0005-use-figma-make-as-ui-prototype-source.md  0006-use-worktree-based-agentic-delivery.md  0007-use-sqlite-for-mvp-local-persistence.md
docs/architecture/: domain_model.md  er_diagram.md  er_diagram.mmd  openapi.yaml  project_assumptions.md
docs/execution_plans/: 01_figma_import_plan.md  02_frontend_refactor_plan.md  03_mock_api_plan.md  04_openapi_alignment_plan.md  05_backend_implementation_plan.md  06_frontend_backend_integration_plan.md  07_quality_release_plan.md  master_execution_plan.md
docs/reports/: backend_implementation_report.md  defect_log.md  figma_import_inventory.md  frontend_refactor_report.md  integration_report.md  mock_api_report.md  openapi_alignment_report.md  (+3 more)
pwa/: .env.example  README.md  biome.json  index.html  package.json  pnpm-lock.yaml
(+87 files in other folders)
