[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shifts-mvp-api"
version = "0.1.0"
description = "FastAPI backend for the Shifts MVP medical duty scheduling application."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "python-json-logger==4.0.0",
    "uvicorn>=0.30,<1.0",
]

[project.scripts]
api = "app.main:main"
app = "app.main:main"
api-seed = "app.db.cli:seed"
api-reset = "app.db.cli:reset"


[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "tox==4.44.0",
    "tox-uv==1.29.0",
    "ruff==0.15.1",
    "ty==0.0.18",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pytest-randomly==4.0.1",
    "pytest-xdist==3.8.0",
    "pytest-timeout==2.4.0",
    "pre-commit==4.5.1",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]


[tool.coverage.run]
source = ["app"]
branch = true
parallel = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 65
